# data-visualization-course

./: .courseignore  .flake8  .pre-commit-config.yaml  .ruff.toml  CONTRIBUTING.md  README.md  course-info.yaml  course-remote-info.yaml  requirements-dev.txt  requirements-style.txt  requirements.txt
0_intro/: section-info.yaml
1_1_line_and_scatter_plots_seaborn/: section-info.yaml
1_line_and_scatter_plots/: section-info.yaml
2_bar_and_pie_charts/: section-info.yaml
3_histograms/: section-info.yaml
bar_and_pie_charts/: section-info.yaml
common/: __init__.py  base_test_mixins.py  paths.py  seaborn_test_mixins.py
course_dev/: pyproject.toml
course_dev/week2/: bar_examples.ipynb  bar_seaborn.ipynb
course_dev/week_0/: anscombe.ipynb  bitcoin.ipynb  budget-outlays.csv  budget-receipts.csv  budget.ipynb  coronavirus.csv  coronavirus.ipynb  sp500-companies-2022-12-29.csv  sp500-plot.ipynb  sp500-preprocessing.ipynb  sp500-shares-2022-12-28.csv
course_dev/week_1/: advanced_matplotlib.ipynb  line_scatter_matplotlib.ipynb  line_scatter_seaborn.ipynb  line_scatter_steps.ipynb  theory.ipynb
course_dev/week_2/: advanced_matplotlib.ipynb  bar_examples.ipynb  bar_pies_matplotlib_steps.ipynb  bar_seaborn.ipynb  bars_pies_steps.ipynb  seaborn_practice.ipynb
course_dev/week_3/: advanced_matplotlib.ipynb  histograms_matplotlib_practice.ipynb  histograms_matplotlib_steps.ipynb  histograms_overview.ipynb  histograms_seaborn_practice.ipynb  histograms_seaborn_steps.ipynb  histograms_steps.ipynb  histograms_theory.ipynb
histograms/: section-info.yaml
(+586 files in other folders)
